--- a/css/main.css
+++ b/css/main.css
@@ -1040,6 +1040,15 @@ section {
   .confirm-text {
     font-size: 14px;
     line-height: 1.71;
+    margin-left: 10px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .confirm-text {
+    font-size: 14px;
+    line-height: 1.71;
+    margin-left: 10px;
   }
 }
 
