--- a/css/main.css
+++ b/css/main.css
@@ -560,8 +560,8 @@ section {
   margin-left: auto;
   height: 100%;
   max-width: 768px;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/desctop.jpg");
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/desctop.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -816,6 +816,13 @@ section {
 
 .modal__close-btn:focus, .modal__close-btn:hover {
   fill: var(--color-link);
+}
+
+@media screen and (max-width: 320px) {
+  .modal__close-btn {
+    top: 34px;
+    right: 4px;
+  }
 }
 
 .modal {
