--- a/sass/components/_modal__close-btn.scss
+++ b/sass/components/_modal__close-btn.scss
@@ -13,6 +13,10 @@
     &:hover{
         fill: var(--color-link);
     }
+    @media screen and (max-width: 320px) {
+    top: 34px;
+    right: 4px;
+}
 }
 
 .modal {
