--- a/sass/components/_sec__bg.scss
+++ b/sass/components/_sec__bg.scss
@@ -8,7 +8,7 @@
     margin-left: auto;
     height: 100%;
     max-width: 768px;
-    background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/desctop.jpg");
+    background-image: linear-gradient( to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
